--- a/src/styles/addPost.scss
+++ b/src/styles/addPost.scss
@@ -156,6 +156,103 @@
   }
 }
 
+.post_form_mobile_container {
+  height: 100%;
+  overflow-y: auto;
+  .post_form_mobile_header {
+    display: flex;
+    padding: 6px 10px 10px 10px;
+    justify-content: space-between;
+    border-bottom: 1px #d3d3d3 solid;
+  }
+
+  .post_pic {
+    margin-top: 10px;
+    margin-bottom: 6px;
+    position: relative;
+  }
+
+  .post_pic img {
+    height: 300px;
+    width: 100vw;
+    box-shadow: 1px 1px 5px #414141;
+  }
+  .close_add_post_img {
+    // display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    padding: 2px 4px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: rgba($color: #242526, $alpha: 0.7);
+    &:hover {
+      background-color: rgba($color: black, $alpha: 0.9);
+      transition: background-color 300ms;
+    }
+    .MuiSvgIcon-root {
+      color: white;
+      margin-top: 2px;
+    }
+  }
+
+  .post_form_mobile_heading {
+    .close_mobile_form_icon {
+      .MuiSvgIcon-root {
+        color: #d3d3d3;
+        font-size: 30px;
+        transform: translate(0, 20%);
+      }
+    }
+    h2 {
+      display: inline;
+      margin: 0;
+      margin-left: 1rem;
+      color: #d3d3d3;
+      padding: 0;
+      font-weight: 400;
+    }
+  }
+
+  .post_form_mobile_submit_btn {
+    display: flex;
+    align-items: center;
+  }
+
+  .post_form_mobile {
+    #body_input {
+      margin-top: 1rem;
+      width: 100%;
+      border: 0;
+      outline: 0;
+      background: none;
+      font-size: 20px;
+      overflow: hidden;
+      color: #dedede;
+    }
+
+    .add_post_img {
+      label {
+        position: fixed;
+        bottom: 0;
+        width: 100vw;
+        border-top: 1px solid floralwhite;
+        font-weight: 500;
+        padding: 8px 10px;
+        display: block;
+        font-size: 18px;
+        color: darkgrey;
+        margin-top: 20px;
+        background: #242526;
+        z-index: 20;
+      }
+    }
+    .post_form_submit_btn {
+      display: none;
+    }
+  }
+}
+
 .submit_btn_pos_change {
   position: sticky !important;
   display: block !important;
