--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,8 @@
 @import "./styles/userDetail/userImage.scss";
 @import "./styles/userDetail/userInfo.scss";
 @import "./styles/userDetail/userPosts.scss";
+@import "./styles/userDetail/userDetailModals/profilePicModal.scss";
+@import "./styles/userDetail/userDetailModals/profileFormModal.scss";
 @import "./styles/comment/commentContainer.scss";
 @import "./styles/comment/comment.scss";
 @import "./styles/comment/mobileComment.scss";
