--- a/src/styles/userDetail/userImage.scss
+++ b/src/styles/userDetail/userImage.scss
@@ -7,6 +7,7 @@
     align-items: center;
   }
   .user_image {
+    position: relative;
     img {
       width: 170px;
       height: 170px;
@@ -25,5 +26,21 @@
       color: floralwhite;
       background: none;
     }
+  }
+}
+
+.user_image_loader_container {
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 170px;
+  background: rgba($color: white, $alpha: 0.4);
+  border-radius: 50%;
+
+  .css-551zx1 {
+    left: 25px;
   }
 }
