--- a/src/styles/addPost.scss
+++ b/src/styles/addPost.scss
@@ -4,6 +4,7 @@
 .add_post-container {
   display: flex;
   padding: 1rem;
+
   .add_post_user_img img {
     border-radius: 50%;
     width: 40px;
@@ -11,8 +12,8 @@
   }
 
   .post_modal_toggle_btn {
-    flex: 2;
     margin-left: 10px;
+    flex: 2;
     p {
       background-color: #7c7c7c;
       color: #dedede;
@@ -20,6 +21,7 @@
       font-size: 18px;
       width: 100%;
       padding: 7px 10px 7px 10px;
+      padding-right: 9rem;
       cursor: default;
 
       &:hover {
