--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,7 +4,16 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+ul {
   padding: 0;
   margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  &:hover {
+    text-decoration: underline;
+  }
 }
