--- a/src/styles/userDetail/userDetailContainer.scss
+++ b/src/styles/userDetail/userDetailContainer.scss
@@ -1,10 +1,24 @@
 .user_detail_container {
-  margin: 1rem 20% 1rem 20%;
+  // margin: 1rem 20% 1rem 20%;
+  position: relative;
+  // @media (max-width: 1000px) {
+  //   margin: 1rem 12% 1rem 12%;
+  // }
 }
 
 .user_detail_info_container {
   display: flex;
   //   background-color: red;
+  margin: 1rem 20% 1rem 20%;
   padding: 1rem 1rem 2rem 1rem;
   border-bottom: 1px solid #d3d3d3;
+
+  @media (max-width: 1000px) {
+    margin: 1rem 12% 1rem 12%;
+  }
+
+  @media (max-width: 650px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
