--- a/src/styles/userDetail/userInfo.scss
+++ b/src/styles/userDetail/userInfo.scss
@@ -18,13 +18,28 @@
     .user_info_edit_profile_btn {
       margin-left: 1rem;
       padding-top: 10px;
+      @media (max-width: 650px) {
+        margin-left: 0;
+      }
       button {
         border: 1px solid #c6c6c6;
         color: floralwhite;
         padding: 4px 8px;
         background: none;
         cursor: pointer;
+
+        @media (max-width: 650px) {
+          width: 200px;
+        }
       }
+    }
+    @media (max-width: 650px) {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      top: 10px;
+      right: 10%;
     }
   }
 
@@ -33,6 +48,9 @@
     .user_info_post_count {
       font-size: 17px;
       margin-right: 2px;
+    }
+    @media (max-width: 650px) {
+      margin-top: 10px;
     }
   }
 
