created cloud functions,added notifications

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@
 @import "./styles/userDetail/userPosts.scss";
 @import "./styles/userDetail/userDetailModals/profilePicModal.scss";
 @import "./styles/userDetail/userDetailModals/profileFormModal.scss";
+@import "./styles/skeletons/userInfoSkeleton.scss";
 @import "./styles/comment/commentContainer.scss";
 @import "./styles/comment/comment.scss";
 @import "./styles/comment/mobileComment.scss";
+@import "./styles/notifications/notifications.scss";
