--- a/src/styles/addPost.scss
+++ b/src/styles/addPost.scss
@@ -22,6 +22,9 @@
       width: 100%;
       padding: 7px 10px 7px 10px;
       padding-right: 9rem;
+      @media (max-width: 450px) {
+        padding-right: 2rem;
+      }
       cursor: default;
 
       &:hover {
