--- a/src/styles/comment/comment.scss
+++ b/src/styles/comment/comment.scss
@@ -1,6 +1,9 @@
 .comment_container {
   display: flex;
   margin-top: 1rem;
+  @media (max-width: 450px) {
+    margin-left: 10px;
+  }
   .user_comment_pic {
     img {
       height: 30px;
@@ -24,5 +27,19 @@
     .comment_text {
       color: #dfdfdf;
     }
+  }
+
+  .comment_delete_btn {
+    display: flex;
+    align-items: center;
+    @media (max-width: 450px) {
+      margin-right: 10px;
+    }
+    .MuiSvgIcon-root {
+      color: red;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    margin-left: auto;
   }
 }
