--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -2,7 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-
+  margin-top: 4rem;
+  margin-bottom: 5rem;
+  @media (max-width: 800px) {
+    margin-top: 7rem;
+  }
   .posts-container {
     display: flex;
     flex-direction: column;
@@ -11,7 +15,7 @@
 
     @media (max-width: 400px) {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
     }
   }
 }
