--- a/src/styles/header/Header.scss
+++ b/src/styles/header/Header.scss
@@ -1,15 +1,22 @@
 #main-header {
   .header-container {
-    background-color: $Primary-color;
+    // background-color: $Primary-color;
+    background-color: #242526;
     box-shadow: 0.5px 0.5px 8px black;
     padding: 1rem 1rem 0 2rem;
     display: flex;
     color: floralwhite;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 
     @media (max-width: 780px) {
       display: flex;
       flex-direction: column;
     }
+    max-width: 100vw;
   }
 }
 
