--- a/src/styles/header/mobileSearch/mobileSearch.scss
+++ b/src/styles/header/mobileSearch/mobileSearch.scss
@@ -9,6 +9,7 @@
     flex: 2;
     padding-bottom: 10px;
     position: relative;
+    // background-color: red;
     input {
       padding: 9px 12px;
       background-color: #676767;
@@ -22,6 +23,13 @@
       &::placeholder {
         color: #bebebe;
       }
+    }
+    .user_list_container {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      z-index: 1001;
     }
     .delete_search {
       position: absolute;
