--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -1,6 +1,3 @@
-body {
-  background-color: #15202b;
-}
 .post-container {
   margin-top: 1rem;
   padding-top: 1rem;
@@ -18,16 +15,58 @@ body {
     position: relative;
     // background-color: red;
 
-    .delete_post_icon {
+    .post_dialog_box_container {
       position: absolute;
-      display: inline-block;
-      top: 6px;
+      top: 8px;
       right: 50px;
-      .MuiSvgIcon-root {
-        color: gold;
-        cursor: pointer;
+      display: inline-block;
+      cursor: pointer;
+
+      .toggle_dialog_btn {
+        color: white;
+      }
+
+      .dialog_list {
+        position: absolute;
+        top: 130%;
+        left: -20px;
+        width: 160px;
+        background-color: #242526;
+        box-shadow: 1px 1px 4px black;
+        border: none;
+        border-radius: 10px;
+        padding: 4px 4px;
+        @media (min-width: 500px) {
+          &:hover {
+            filter: brightness(1.4);
+          }
+        }
+        &::before {
+          content: "";
+          display: block;
+          height: 0;
+          width: 0;
+          border-bottom: 15px solid #242526;
+          border-left: 15px solid transparent;
+          border-right: 15px solid transparent;
+          position: absolute;
+          top: -10px;
+          left: 7px;
+        }
+        color: red;
       }
     }
+
+    // .delete_post_icon {
+    //   position: absolute;
+    //   display: inline-block;
+    //   top: 6px;
+    //   right: 50px;
+    //   .MuiSvgIcon-root {
+    //     color: gold;
+    //     cursor: pointer;
+    //   }
+    // }
   }
 
   .post-text {
@@ -144,7 +183,7 @@ body {
 
 @media (max-width: 400px) and (hover: none) {
   .post-container {
-    width: 100%;
+    width: 90vw;
     margin-left: 0;
     .post-img img {
       // height: 300px;
