--- a/src/styles/registerForm.scss
+++ b/src/styles/registerForm.scss
@@ -1,10 +1,27 @@
+.login_page,
+.register_page {
+  display: flex;
+  height: 100vh;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+}
+
 .register-form-container,
 .login-form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
-  margin-top: 2rem;
+
+  .link_text {
+    margin-top: 1rem;
+    font-size: 14px;
+    color: white;
+    span {
+      color: $Primary-color;
+    }
+  }
 
   .login-form-heading-container,
   .register-form-heading-container {
@@ -26,7 +43,7 @@
     width: 400px;
 
     @media (max-width: 450px) {
-      width: 95%;
+      width: 300px;
     }
 
     .form-block {
@@ -40,12 +57,23 @@
       button {
         padding: 8px 4rem;
         border-radius: 20px;
+        cursor: pointer;
+        box-shadow: 1px 1px 7px black;
         color: floralwhite;
         background-color: $Primary-color;
         border: none;
         font-size: 17px;
+        outline: 0;
         &:hover {
           background-color: #1b95e0;
+        }
+        .MuiCircularProgress-root {
+          height: 10px !important;
+          width: 10px !important;
+        }
+        svg {
+          transform: scale(2);
+          color: white;
         }
       }
     }
@@ -58,6 +86,10 @@
 
       .MuiInputBase-root {
         color: white;
+
+        // input:-internal-autofill-selected {
+        //   background-color: #15202b !important ;
+        // }
       }
       .MuiInput-underline:before {
         border-bottom: 1px solid gold;
