--- a/src/styles/userDetail/userDetailModals/profileFormModal.scss
+++ b/src/styles/userDetail/userDetailModals/profileFormModal.scss
@@ -3,6 +3,10 @@
   background-color: #4b4b4b;
   position: relative;
   border: none;
+  @media (max-width: 450px) {
+    height: 100vh;
+    width: 100vw;
+  }
   h2 {
     color: black;
     text-align: center;
