--- a/src/styles/userDetail/userInfo.scss
+++ b/src/styles/userDetail/userInfo.scss
@@ -19,6 +19,7 @@
     .user_info_edit_profile_btn {
       margin-left: 1rem;
       padding-top: 10px;
+
       @media (max-width: 650px) {
         margin-left: 0;
       }
@@ -31,6 +32,10 @@
 
         @media (max-width: 650px) {
           width: 200px;
+        }
+
+        @media (max-width: 450px) {
+          width: 150px;
         }
       }
     }
